--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
+    "pluralize": "^8.0.0",
     "sass-loader": "^8.0.0"
   },
   "devDependencies": {}
