--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
     "pluralize": "^8.0.0",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {}
 }
