--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nuxt": "^2.0.0",
     "pluralize": "^8.0.0",
     "sass-loader": "^8.0.0",
-    "vue-scrollto": "^2.17.1"
+    "vue-scrollto": "^2.17.1",
+    "vue-select": "^3.2.0"
   },
   "devDependencies": {}
 }
